--- a/consignment.html
+++ b/consignment.html
@@ -237,8 +237,8 @@
             <div class="ui secondary menu">
                 <a class="item" data-tab="Party_about">О партії</a>
                 <a class="item" data-tab="Party_program">Программа партії</a>
-                <a class="item active" data-tab="Party_initiative">Іниціатива партії</a>
-                <a class="item" data-tab="Party_multimedia">Мультимедіа</a>
+                <a class="item" data-tab="Party_initiative">Іниціатива партії</a>
+                <a class="item active" data-tab="Party_multimedia">Мультимедіа</a>
                 <a class="item" data-tab="Party_rest">Мерч/Лого/Брендбук</a>
             </div>
             <div class="ui tab" data-tab="Party_about">
@@ -247,7 +247,7 @@
             <div class="ui tab" data-tab="Party_program">
                 2
             </div>
-            <div class="ui active tab" data-tab="Party_initiative">
+            <div class="ui tab" data-tab="Party_initiative">
                 <section class="party_initiative">
                     <div class="party_initiative_items">
                         <div class="party_initiative_items_l">
@@ -326,8 +326,174 @@
                     </div>
                 </section>
             </div>
-            <div class="ui tab" data-tab="Party_multimedia">
-                4
+            <div class="ui active tab" data-tab="Party_multimedia">
+               <section class="multimedia">
+                   <div class="multimedia_grid">
+                       <div class="page_news_grid_items">
+                           <a href="#">
+                               <div class="container_news_img">
+                                   <img src="./img/ImageMulti.png" alt="">
+                                   <div class="label_all yellow">
+                                       <img src="./img/photo.svg " alt="">
+                                   </div>
+                               </div>
+                           </a>
+                           <div class="container_news_content">
+                               <a href="#" class="container_news_content_t_b">
+                                   Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
+                               </a>
+                           </div>
+                       </div>
+                       <div class="page_news_grid_items">
+                           <a href="#">
+                               <div class="container_news_img">
+                                   <img src="./img/ImageMulti.png" alt="">
+                                   <div class="label_all pink">
+                                       <img src="./img/play-button%201.svg" alt="">
+                                   </div>
+                               </div>
+                           </a>
+                           <div class="container_news_content">
+                               <a href="#" class="container_news_content_t_b">
+                                   Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
+                               </a>
+                           </div>
+                       </div>
+                       <div class="page_news_grid_items">
+                           <a href="#">
+                               <div class="container_news_img">
+                                   <img src="./img/ImageMulti.png" alt="">
+                                   <div class="label_all pink">
+                                       <img src="./img/play-button%201.svg" alt="">
+                                   </div>
+                               </div>
+                           </a>
+                           <div class="container_news_content">
+                               <a href="#" class="container_news_content_t_b">
+                                   Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
+                               </a>
+                           </div>
+                       </div>
+                       <div class="page_news_grid_items">
+                           <a href="#">
+                               <div class="container_news_img">
+                                   <img src="./img/ImageMulti.png" alt="">
+                                   <div class="label_all yellow">
+                                       <img src="./img/photo.svg " alt="">
+                                   </div>
+                               </div>
+                           </a>
+                           <div class="container_news_content">
+                               <a href="#" class="container_news_content_t_b">
+                                   Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
+                               </a>
+                           </div>
+                       </div>
+                       <div class="page_news_grid_items">
+                           <a href="#">
+                               <div class="container_news_img">
+                                   <img src="./img/ImageMulti.png" alt="">
+                                   <div class="label_all pink">
+                                       <img src="./img/play-button%201.svg" alt="">
+                                   </div>
+                               </div>
+                           </a>
+                           <div class="container_news_content">
+                               <a href="#" class="container_news_content_t_b">
+                                   Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
+                               </a>
+                           </div>
+                       </div>
+                       <div class="page_news_grid_items">
+                           <a href="#">
+                               <div class="container_news_img">
+                                   <img src="./img/ImageMulti.png" alt="">
+                                   <div class="label_all pink">
+                                       <img src="./img/play-button%201.svg" alt="">
+                                   </div>
+                               </div>
+                           </a>
+                           <div class="container_news_content">
+                               <a href="#" class="container_news_content_t_b">
+                                   Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
+                               </a>
+                           </div>
+                       </div>
+                       <div class="page_news_grid_items">
+                           <a href="#">
+                               <div class="container_news_img">
+                                   <img src="./img/ImageMulti.png" alt="">
+                                   <div class="label_all yellow">
+                                       <img src="./img/photo.svg " alt="">
+                                   </div>
+                               </div>
+                           </a>
+                           <div class="container_news_content">
+                               <a href="#" class="container_news_content_t_b">
+                                   Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
+                               </a>
+                           </div>
+                       </div>
+                       <div class="page_news_grid_items">
+                           <a href="#">
+                               <div class="container_news_img">
+                                   <img src="./img/ImageMulti.png" alt="">
+                                   <div class="label_all pink">
+                                       <img src="./img/play-button%201.svg" alt="">
+                                   </div>
+                               </div>
+                           </a>
+                           <div class="container_news_content">
+                               <a href="#" class="container_news_content_t_b">
+                                   Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
+                               </a>
+                           </div>
+                       </div>
+                       <div class="page_news_grid_items">
+                           <a href="#">
+                               <div class="container_news_img">
+                                   <img src="./img/ImageMulti.png" alt="">
+                                   <div class="label_all pink">
+                                       <img src="./img/play-button%201.svg" alt="">
+                                   </div>
+                               </div>
+                           </a>
+                           <div class="container_news_content">
+                               <a href="#" class="container_news_content_t_b">
+                                   Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
+                               </a>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="page_news_bottom">
+                       <a href="#" class="show_button">
+                           Показать ещё
+                       </a>
+                       <div class="ui pagination menu">
+                           <a class="item arrow_left">
+                               <img src="./img/arrow_pagination.svg" alt="">
+                           </a>
+                           <a class="active item">
+                               1
+                           </a>
+                           <div class="disabled item">
+                               ...
+                           </div>
+                           <a class="item">
+                               10
+                           </a>
+                           <a class="item">
+                               11
+                           </a>
+                           <a class="item">
+                               12
+                           </a>
+                           <a class="item arrow_right">
+                               <img src="./img/arrow_pagination.svg" alt="">
+                           </a>
+                       </div>
+                   </div>
+               </section>
             </div>
             <div class="ui tab" data-tab="Party_rest">
                 5
