--- a/contact.html
+++ b/contact.html
@@ -216,284 +216,62 @@
             <a href="#">Головна</a>
         </li>
         <li class="bread_link">
-            <a href="#">
-                <img src="./img/arrow_left.svg" alt="">
-                Опитування виборців
-            </a>
-        </li>
-        <li class="bread_link">
             <img src="./img/arrow_left.svg" alt="">
-            Що для Вас управління містом у смартфоні?
+            Контакти
         </li>
     </ul>
-    <section class="voter">
+    <section class="contact">
         <div class="page_news_top voter_top">
-            <h1 class="text_big_all">Що для Вас управління містом у смартфоні? </h1>
+            <h1 class="text_big_all">Контакти</h1>
         </div>
-        <div class="news_page voter_page_grid ">
-            <div class="voter_page_grid_l">
-                <form id="interview">
-                    <div class="ui active tab segment" data-tab="1">
-                        <div class="voter_page_grid_l_text">Якась назва питання, може бути декілька строчек або більше
-                            ніж дві
-                            строчки. Назва питання та нижче будуть йти варіанти відповідей?
-                        </div>
-                        <div class="checkbox_interview ui form">
-                            <div class="grouped fields">
-                                <div class="field">
-                                    <div class="ui radio checkbox checked">
-                                        <input type="radio" name="example2" checked="checked">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                А
-                                            </div>
-                                            Варіант відповді на питання, може бути розвернутий варіант відповіді, а може
-                                            бути і короткий.</label>
-                                    </div>
-                                </div>
-                                <div class="field">
-                                    <div class="ui radio checkbox">
-                                        <input type="radio" name="example2">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                Б
-                                            </div>
-                                            Варіант відповді на питання, може бути розвернутий варіант.</label>
-                                    </div>
-                                </div>
-                                <div class="field">
-                                    <div class="ui radio checkbox">
-                                        <input type="radio" name="example2">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                В
-                                            </div>
-                                            Варіант відповді на питання.</label>
-                                    </div>
-                                </div>
-                                <div class="field">
-                                    <div class="ui radio checkbox">
-                                        <input type="radio" name="example2">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                Г
-                                            </div>
-                                            Варіант відповді на питання, може бути розвернутий варіант відповіді, а може
-                                            бути і короткий.</label>
-                                    </div>
-                                </div>
-                                <div class="field">
-                                    <div class="ui radio checkbox">
-                                        <input type="radio" name="example2">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                ґ
-                                            </div>
-                                            Варіант відповді на питання, може бути розвернутий варіант.</label>
-                                    </div>
-                                </div>
-                                <div class="field">
-                                    <div class="ui radio checkbox">
-                                        <input type="radio" name="example2">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                Д
-                                            </div>
-                                            <textarea placeholder="Введіть Ваш власний варіант відповіді"></textarea>
-                                        </label>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ui tab segment" data-tab="2">
-                        <div class="voter_page_grid_l_text">Якась назва питання, може бути декілька строчек або більше
-                            ніж дві
-                            строчки. Назва питання та нижче будуть йти варіанти відповідей? 123
-                        </div>
-                        <div class="checkbox_interview ui form">
-                            <div class="grouped fields">
-                                <div class="field">
-                                    <div class="ui radio checkbox checked">
-                                        <input type="radio" name="example3" checked="checked">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                А
-                                            </div>
-                                            Варіант відповді на питання, може бути розвернутий варіант відповіді, а може
-                                            бути і короткий.</label>
-                                    </div>
-                                </div>
-                                <div class="field">
-                                    <div class="ui radio checkbox">
-                                        <input type="radio" name="example3">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                Б
-                                            </div>
-                                            Варіант відповді на питання, може бути розвернутий варіант.</label>
-                                    </div>
-                                </div>
-                                <div class="field">
-                                    <div class="ui radio checkbox">
-                                        <input type="radio" name="example3">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                В
-                                            </div>
-                                            Варіант відповді на питання.</label>
-                                    </div>
-                                </div>
-                                <div class="field">
-                                    <div class="ui radio checkbox">
-                                        <input type="radio" name="example3">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                Г
-                                            </div>
-                                            Варіант відповді на питання, може бути розвернутий варіант відповіді, а може
-                                            бути і короткий.</label>
-                                    </div>
-                                </div>
-                                <div class="field">
-                                    <div class="ui radio checkbox">
-                                        <input type="radio" name="example3">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                ґ
-                                            </div>
-                                            Варіант відповді на питання, може бути розвернутий варіант.</label>
-                                    </div>
-                                </div>
-                                <div class="field">
-                                    <div class="ui radio checkbox">
-                                        <input type="radio" name="example3">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                Д
-                                            </div>
-                                            <textarea placeholder="Введіть Ваш власний варіант відповіді"></textarea>
-                                        </label>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ui tab segment" data-tab="3">
-                        <div class="voter_page_grid_l_text">Якась назва питання, може бути декілька строчек або більше
-                            ніж дві
-                            строчки. Назва питання та нижче будуть йти варіанти відповідей? 12345
-                        </div>
-                        <div class="checkbox_interview ui form">
-                            <div class="grouped fields">
-                                <div class="field">
-                                    <div class="ui radio checkbox checked">
-                                        <input type="radio" name="example4" checked="checked">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                А
-                                            </div>
-                                            Варіант відповді на питання, може бути розвернутий варіант відповіді, а може
-                                            бути і короткий.</label>
-                                    </div>
-                                </div>
-                                <div class="field">
-                                    <div class="ui radio checkbox">
-                                        <input type="radio" name="example4">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                Б
-                                            </div>
-                                            Варіант відповді на питання, може бути розвернутий варіант.</label>
-                                    </div>
-                                </div>
-                                <div class="field">
-                                    <div class="ui radio checkbox">
-                                        <input type="radio" name="example4">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                В
-                                            </div>
-                                            Варіант відповді на питання.</label>
-                                    </div>
-                                </div>
-                                <div class="field">
-                                    <div class="ui radio checkbox">
-                                        <input type="radio" name="example4">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                Г
-                                            </div>
-                                            Варіант відповді на питання, може бути розвернутий варіант відповіді, а може
-                                            бути і короткий.</label>
-                                    </div>
-                                </div>
-                                <div class="field">
-                                    <div class="ui radio checkbox">
-                                        <input type="radio" name="example4">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                ґ
-                                            </div>
-                                            Варіант відповді на питання, може бути розвернутий варіант.</label>
-                                    </div>
-                                </div>
-                                <div class="field">
-                                    <div class="ui radio checkbox">
-                                        <input type="radio" name="example4">
-                                        <label>
-                                            <div class="checkbox_label">
-                                                Д
-                                            </div>
-                                            <textarea placeholder="Введіть Ваш власний варіант відповіді"></textarea>
-                                        </label>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-                <div class="line_interview">
-                    <div class="button_interview_prev">
-                        <img src="./img/arrow.svg" alt="" class="img-svg">
-                    </div>
-                    <div class="line_interview_list">
-                        <div class="number_list_start">1</div>
-                        <div class="rectangle_stick"></div>
-                        <div class="number_list_end">22</div>
-                    </div>
-                    <div class="line_interview_progress">
-                        <div class="width_ellipse"></div>
-                    </div>
-                    <a href="results.html" class="button_interview_next button_all ">
-                        Далі
-                    </a>
+        <div class="contact_grid">
+            <div class="contact_l">
+                <div class="contact_top">
+                    <div class="contact_l_text_b">Головний офіс</div>
                 </div>
-
-            </div>
-            <div class="voter_page_grid_r news_page_r">
-                <div class="soc_subscribe_grid share_news">
-                    <div class="soc_subscribe_items">
-                        <div class="soc_subscribe_items_text">Поділитись новиною:</div>
-                        <div class="header_top_soc_link">
-                            <a href="#" target="_blank"><img src="./img/Fasebook%201.svg" class="img-svg"
-                                                             alt=""></a>
-                            <a href="#" target="_blank"><img src="./img/Twitter.svg" class="img-svg" alt=""></a>
-                        </div>
+                <div class="contact_column">
+                    <div class="location_content">
+                        <div class="location_content_s">Телефон:</div>
+                        <a href="tel:+380993233982" class="location_content_b">+38(099) - 32 - 33 - 982</a>
                     </div>
-                    <div class="soc_subscribe_items ">
-                        <div class="soc_subscribe_items_text">Відправити другу у мессенджер :</div>
-                        <div class="header_top_soc_link messenger">
-                            <a href="#" target="_blank"><img src="./img/Viber.svg" class="img-svg" alt=""></a>
-                            <a href="#" target="_blank"><img src="./img/Telegram.svg" class="img-svg" alt=""></a>
+                    <div class="location_content">
+                        <div class="location_content_s">E-mail:</div>
+                        <a href="mailto:info_maul@gmail.com"  class="location_content_b">info_maul@gmail.com</a>
+                    </div>
+                    <div class="location_content">
+                        <div class="location_content_s">Адреса:</div>
+                        <div class="location_content_b">Харків, вул. Богдана Хмельнитського 104 офіс 202 (3 поверх)
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+            <div class="contact_r">
+                <div class="contact_top">
+                    <div class="contact_l_text_s">Тільки для журналістів</div>
+                    <div class="contact_l_text_b">Прес-служба</div>
+                </div>
+                <div class="contact_column">
+                    <div class="location_content">
+                        <div class="location_content_s">Контактна особа</div>
+                        <div  class="location_content_b">В'ячеслав Шевченко</div>
+                    </div>
+                    <div class="contact_row">
+                        <div class="location_content">
+                            <div class="location_content_s">Телефон:</div>
+                            <a href="tel:+380993233982" class="location_content_b">+38(099) - 32 - 33 - 982</a>
+                        </div>
+                        <div class="location_content">
+                            <div class="location_content_s">E-mail:</div>
+                            <a href="mailto:info_maul@gmail.com" class="location_content_b">info_maul@gmail.com</a>
+                        </div>
+                    </div>
+                    <div class="location_content">
+                        <div class="location_content_s">Адреса:</div>
+                        <div class="location_content_b">Харків, вул. Богдана Хмельнитського 104 офіс 202 (3 поверх)
+                        </div>
+                    </div>
+                </div>
+            </div>
     </section>
 </div>
 <section class="container_idea container_all">
