add page and fix script

--- a/news.html
+++ b/news.html
@@ -525,36 +525,36 @@
         </div>
     </section>
     <section class="container_idea">
-        <div class="container_idea_items">
+        <a href="#" class="container_idea_items">
             <div class="container_idea_icon">
                 <img src="./img/join_2.svg" alt="">
             </div>
             <div class="container_idea_text">Приєднуйся до нашої партіі</div>
-        </div>
-        <div class="container_idea_items">
+        </a>
+        <a href="#" class="container_idea_items">
             <div class="container_idea_icon">
                 <img src="./img/elections_2.svg" alt="">
             </div>
             <div class="container_idea_text">Контролюй вибори</div>
-        </div>
-        <div class="container_idea_items">
+        </a>
+        <a href="#" class="container_idea_items">
             <div class="container_idea_icon">
                 <img src="./img/idea_2%201.svg" alt="">
             </div>
             <div class="container_idea_text">Створюй власні ініціативи</div>
-        </div>
-        <div class="container_idea_items">
+        </a>
+        <a href="#" class="container_idea_items">
             <div class="container_idea_icon">
                 <img src="./img/politician_1%201.svg" alt="">
             </div>
             <div class="container_idea_text">Як стати депутатом</div>
-        </div>
-        <div class="container_idea_items">
+        </a>
+        <a href="#" class="container_idea_items">
             <div class="container_idea_icon">
                 <img src="./img/mailing_2%201.svg" alt="">
             </div>
             <div class="container_idea_text">Будь в курсі там, де тобі зручно!</div>
-        </div>
+        </a>
     </section>
     <div class="container_subscribe">
         <div class="container_subscribe_l">
@@ -629,7 +629,7 @@
             <ul class="footer_links">
                 <li><a href="#">Програма партії</a></li>
                 <li><a href="#">Ініціативи партії</a></li>
-                <li><a href="#">Опитування виборців</a></li>
+                <li><a href="#">Опитування ви борців</a></li>
                 <li><a href="#">Фінансова підтримка</a></li>
                 <li><a href="#">Питання та відповіді</a></li>
                 <li><a href="#">Мультімедіа</a></li>
@@ -676,5 +676,8 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+<script type="text/javascript"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmhz8lPDq1So_4IZeIaytwyyscDz9PXkI&libraries=places&sensor=false"></script>
 <script src="script.js" type="text/javascript"></script>
 </html>
