--- a/contact.html
+++ b/contact.html
@@ -425,5 +425,8 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+<script type="text/javascript"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmhz8lPDq1So_4IZeIaytwyyscDz9PXkI&libraries=places&sensor=false"></script>
 <script src="script.js" type="text/javascript"></script>
 </html>
