--- a/join_page.html
+++ b/join_page.html
@@ -125,7 +125,7 @@
                 </h3>
                 <p>Якійсь абзац тексту про те навіщо виборцю проходити опитування і що він як виборець зможе допомогти
                     якщо він пройде це опитування.</p>
-                <img src="imgllustration_1%203.png" alt="">
+                <img src="./img/Illustration_1%203.png" alt="">
                 <p>Якійсь абзац тексту про те, навіщо виборцю проходити опитування і що він, як виборець, зможе
                     допомогти, якщо він пройде це опитування. Якійсь абзац тексту про те. навіщо виборцю проходити
                     опитування і що він.
@@ -139,7 +139,7 @@
                 <h3>
                     Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
                 </h3>
-                <img src="imgllustration_1%203.png" alt="">
+                <img src="./img/Illustration_1%203.png" alt="">
                 <p>
                     Якійсь абзац тексту про те, навіщо виборцю проходити опитування і що він, як виборець, зможе
                     допомогти, якщо він пройде це опитування. Якійсь абзац тексту про те. навіщо виборцю проходити
@@ -308,5 +308,8 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+<script type="text/javascript"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmhz8lPDq1So_4IZeIaytwyyscDz9PXkI&libraries=places&sensor=false"></script>
 <script src="script.js" type="text/javascript"></script>
 </html>
