--- a/participation.html
+++ b/participation.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Мультимедиа Видео</title>
+    <title>Возьмите участие</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
@@ -210,69 +210,62 @@
         </div>
     </div>
 </header>
-<a class="container_all container_home container_news_page">
+<div class="container_all container_home container_news_page">
     <ul class="bread_crumbs">
         <li class="bread_link">
             <a href="#">Головна</a>
         </li>
         <li class="bread_link">
-            <a href="#">
-                <img src="./img/arrow_left.svg" alt="">
-                Питання та відповіді
-            </a>
-        </li>
-        <li class="bread_link">
             <img src="./img/arrow_left.svg" alt="">
-            Тут повинен бути якись слоган заголовок новини не більш ниж у три строки
+            Візьми участь
         </li>
     </ul>
-    <section class="multimedia_video">
+    <section class="participation">
         <div class="page_news_top voter_top">
-            <h1 class="text_big_all">Тут повинен бути якись слоган заголовок новини не більш ниж у три строки</h1>
+            <h1 class="text_big_all">Візьми участь</h1>
         </div>
-        <div class="video_block">
-            <div class="button_play">
-                <img src="./img/Polygon%202.svg" class="img-svg" alt="">
-            </div>
-            <video controls width="710" height="538" poster="./img/Rectangle%2017.png" preload="none">
-                <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4"
-                        type="video/mp4">
-            </video>
-        </div>
-    </section>
-    <section class="container_idea">
-        <a href="#" class="container_idea_items">
-            <div class="container_idea_icon">
-                <img src="./img/join_2.svg" alt="">
-            </div>
-            <div class="container_idea_text">Приєднуйся до нашої партіі</div>
-        </a>
-        <a href="#" class="container_idea_items">
-            <div class="container_idea_icon">
-                <img src="./img/elections_2.svg" alt="">
-            </div>
-            <div class="container_idea_text">Контролюй вибори</div>
-        </a>
-        <a href="#" class="container_idea_items">
-            <div class="container_idea_icon">
-                <img src="./img/idea_2%201.svg" alt="">
-            </div>
-            <div class="container_idea_text">Створюй власні ініціативи</div>
-        </a>
-        <a href="#" class="container_idea_items">
-            <div class="container_idea_icon">
-                <img src="./img/politician_1%201.svg" alt="">
-            </div>
-            <div class="container_idea_text">Як стати депутатом</div>
-        </a>
-        <a href="#" class="container_idea_items">
-            <div class="container_idea_icon">
-                <img src="./img/mailing_2%201.svg" alt="">
-            </div>
-            <div class="container_idea_text">Будь в курсі там, де тобі зручно!</div>
-        </a>
+        <div class="container_idea">
+            <a href="#" class="container_idea_items">
+                <div class="container_idea_icon">
+                    <img src="./img/join_2.svg" alt="">
+                </div>
+                <div class="container_idea_text">Приєднуйся до нашої партіі</div>
+            </a>
+            <a href="#" class="container_idea_items">
+                <div class="container_idea_icon">
+                    <img src="./img/elections_2.svg" alt="">
+                </div>
+                <div class="container_idea_text">Контролюй вибори</div>
+            </a>
+            <a href="#" class="container_idea_items">
+                <div class="container_idea_icon">
+                    <img src="./img/idea_2%201.svg" alt="">
+                </div>
+                <div class="container_idea_text">Створюй власні ініціативи</div>
+            </a>
+            <a href="#" class="container_idea_items">
+                <div class="container_idea_icon">
+                    <img src="./img/politician_1%201.svg" alt="">
+                </div>
+                <div class="container_idea_text">Як стати депутатом</div>
+            </a>
+            <a href="#" class="container_idea_items">
+                <div class="container_idea_icon">
+                    <img src="./img/finance%201.svg" alt="">
+                </div>
+                <div class="container_idea_text">Фінансова підтримка</div>
+            </a>
+            <a href="#" class="container_idea_items">
+                <div class="container_idea_icon">
+                    <img src="./img/mailing_2%201.svg" alt="">
+                </div>
+                <div class="container_idea_text">Будь в курсі там, де тобі зручно!</div>
+            </a>
 
+        </div>
     </section>
+
+
     <div class="container_subscribe">
         <div class="container_subscribe_l">
             <p>Нас вже:</p>
